added support for !important

--- a/test/fixtures/less/src/test.less
+++ b/test/fixtures/less/src/test.less
@@ -5,7 +5,7 @@
 
 .first-selector {
   content: 'first selector';
-  color: @variable-color;
+  color: @variable-color !important;
 
   @media (max-width: 300px) {
     content: 'first selector media query';
