--- a/test/fixtures/stylus/src/test.styl
+++ b/test/fixtures/stylus/src/test.styl
@@ -3,9 +3,9 @@
 
 /* !ATTN */
 
-.first-selector 
+.first-selector
   content 'first selector'
-  color variable-color
+  color variable-color !important
 
   @media (max-width: 300px)
     content 'first selector media query'
