clean up tests and added sass extension to test fixtures

--- a/test/fixtures/stylus/src/test.styl
+++ b/test/fixtures/stylus/src/test.styl
@@ -1,7 +1,5 @@
 @import 'variable-includes'
-@import 'should-not-include'
-
-/* !ATTN */
+@import 'should-include'
 
 .first-selector
   content 'first selector'
